Added footer with links

--- a/index.html
+++ b/index.html
@@ -42,6 +42,22 @@
         <div id="wind" class="weather-specs">Wind: 5 mph</div>
       </div>
     </div>
+    <footer>
+      <a
+        class="footer-link"
+        href="https://github.com/springchild/new-weather-app"
+        >Open-source code</a
+      >
+      by
+      <a
+        class="footer-link"
+        href="https://www.linkedin.com/in/polina-dyrda-a5121621b/"
+        >Polina Dyrda</a
+      >. Hosted on
+      <a class="footer-link" href="https://admiring-newton-38b9e2.netlify.app/"
+        >Netlify.</a
+      >
+    </footer>
     <script scc="src/index.js"></script>
   </body>
 </html>
