Added local time

--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/style.css" />
-    <script
-      src="https://kit.fontawesome.com/ee73285fd9.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
     <div class="container">
@@ -27,6 +23,11 @@
         </form>
       </div>
       <h1 id="city">Boston</h1>
+      <h3 id="date-time">
+        <span id="Day">Wed</span> <span id="hours">12</span>:<span id="minutes"
+          >39</span
+        ><span id="am-pm">PM</span>
+      </h3>
       <div id="temp-now">
         <span id="temp-digits">59&deg</span
         ><span id="temp-units"
