Changed color scheme, changed app title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Polina's Weather App</title>
+    <title>Vanilla Weather App</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,9 +22,9 @@
           <input id="location-button" type="button" value=" 📍 " />
         </form>
       </div>
-      <h1 id="city">Boston</h1>
-      <h3 id="date-time">
-        <span id="Day">Wed</span> <span id="hours">12</span>:<span id="minutes"
+      <h1><span id="city">Boston</span>, <span id="country">US</span></h1>
+      <h3 id="day-time">
+        <span id="day">Wed</span> <span id="hours">12</span>:<span id="minutes"
           >39</span
         ><span id="am-pm">PM</span>
       </h3>
