Added current time

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body>
+    <h3>Report last updated on: <span id="date-time"></span></h3>
     <div class="container">
       <div class="app-wrapper">
         <div id="form-wrapper">
@@ -35,12 +36,6 @@
           />
         </div>
         <h1><span id="city"></span>, <span id="country"></span></h1>
-        <h3 id="day-time">
-          <span id="day">Wed</span> <span id="hours">12</span>:<span
-            id="minutes"
-            >39</span
-          ><span id="am-pm">PM</span>
-        </h3>
         <div id="temp-now">
           <span id="temp-digits"></span><span id="degree-sign">&deg</span
           ><span id="temp-units">
