deleted icons from img folder

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           >
         </div>
 
-        <img id="main-icon" src="img/ICONS/sunny.png" alt="sunny" />
+        <img id="main-icon" src="#" alt="placeholder" />
         <div id="weather-desc"></div>
         <div id="weather-specs-wrapper">
           <div class="feels-like" class="weather-specs">
