Added API aided search engine

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
       <div class="app-wrapper">
         <div id="form-wrapper">
           <form>
-            <input id="input-bar" type="text" placeholder=" Enter a city..." />
+            <input
+              id="input-bar"
+              type="search"
+              placeholder=" Enter a city..."
+              autocomplete="off"
+            />
             <input
               type="image"
               id="search-button"
