Styled temp links to reflect active link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <div id="temp-now">
           <span id="temp-digits"></span><span id="degree-sign">&deg</span
           ><span id="temp-units">
-            <a id="temp-f" href="#">F</a>|<a id="temp-c" href="#">C</a></span
+            <a id="temp-f" class="active" href="#">F</a>|<a id="temp-c" href="#"
+              >C</a
+            ></span
           >
         </div>
 
