Switched to more detailed weather desc

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body>
-    <h3>Report last updated on: <span id="date-time"></span></h3>
+    <h3>Forecast last updated on: <span id="date-time"></span></h3>
     <div class="container">
       <div class="app-wrapper">
         <div id="form-wrapper">
