--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
@@ -15,14 +21,15 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body>
-    <h3>Forecast last updated on: <span id="date-time"></span></h3>
     <div class="container">
+      <h3>Forecast last updated on: <span id="date-time"></span></h3>
       <div class="app-wrapper">
-        <div id="form-wrapper">
-          <form>
+        <div id="form-wrapper" class="clearfix">
+          <form class="floater-left">
             <input
               id="input-bar"
               type="search"
+              size="23"
               placeholder=" Enter a city..."
               autocomplete="off"
             />
@@ -34,6 +41,7 @@
             />
           </form>
           <input
+            class="floater-right"
             type="image"
             id="location-button"
             alt=" "
@@ -61,6 +69,53 @@
           </div>
           <div class="wind" class="weather-specs">
             Wind: <span id="wind"></span> mph
+          </div>
+        </div>
+        <div class="forecast-wrapper">
+          <div class="forecast-element row">
+            <span class="week-day col">Friday</span>
+            <strong class="week-temp col">57&deg</strong>
+            <img
+              class="mini-icon col"
+              src="https://openweathermap.org/img/wn/10d@2x.png"
+              alt="rain"
+            />
+          </div>
+          <div class="forecast-element row">
+            <span class="week-day col">Saturday</span>
+            <strong class="week-temp col">56&deg</strong>
+            <img
+              class="mini-icon col"
+              src="https://openweathermap.org/img/wn/11d@2x.png"
+              alt="thunderstorm"
+            />
+          </div>
+          <div class="forecast-element row">
+            <span class="week-day col">Sunday</span>
+            <strong class="week-temp col">58&deg</strong>
+            <img
+              class="mini-icon col"
+              src="https://openweathermap.org/img/wn/02d@2x.png"
+              alt="few clouds"
+            />
+          </div>
+          <div class="forecast-element row">
+            <span class="week-day col">Monday</span>
+            <strong class="week-temp col">5&deg</strong>
+            <img
+              class="mini-icon col"
+              src="https://openweathermap.org/img/wn/04d@2x.png"
+              alt="broken clouds"
+            />
+          </div>
+          <div class="forecast-element row">
+            <span class="week-day col">Tuesday</span>
+            <strong class="week-temp col">160&deg</strong>
+            <img
+              class="mini-icon col"
+              src="https://openweathermap.org/img/wn/01d@2x.png"
+              alt="clear sky"
+            />
           </div>
         </div>
       </div>
