Some more css styling done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <form class="floater-left">
             <input
               id="input-bar"
-              type="search"
+              type="text"
               size="23"
               placeholder=" Enter a city..."
               autocomplete="off"
