Added hi and lo temp html + css

--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
         <div class="forecast-wrapper">
           <div class="forecast-element row">
             <span class="week-day col">Friday</span>
-            <strong class="week-temp col">57&deg</strong>
+            <span class="week-temp col">
+              <span class="temp-hi">57&deg</span>
+              <span class="temp-lo">50&deg</span>
+            </span>
             <img
               class="mini-icon col"
               src="https://openweathermap.org/img/wn/10d@2x.png"
@@ -131,11 +134,7 @@
           href="https://www.linkedin.com/in/polina-dyrda-a5121621b/"
           >Polina Dyrda</a
         >. Hosted on
-        <a
-          class="footer-link"
-          href="https://admiring-newton-38b9e2.netlify.app/"
-          >Netlify.</a
-        >
+        <a class="footer-link" href="https://www.netlify.com/">Netlify.</a>
       </footer>
     </div>
     <script src="src/index.js"></script>
