Moved forecast element HTML to JS to be replicated by looping thru array

--- a/index.html
+++ b/index.html
@@ -71,20 +71,7 @@
             Wind: <span id="wind"></span> mph
           </div>
         </div>
-        <div class="forecast-wrapper">
-          <div class="forecast-element row">
-            <span class="week-day col">Friday</span>
-            <span class="week-temp col">
-              <span class="temp-hi">57&deg</span>
-              <span class="temp-lo">50&deg</span>
-            </span>
-            <img
-              class="mini-icon col"
-              src="https://openweathermap.org/img/wn/10d@2x.png"
-              alt="rain"
-            />
-          </div>
-        </div>
+        <div class="forecast-wrapper" id="forecast"></div>
       </div>
       <footer>
         <a
