Added some finishing touches

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
             <input
               type="image"
               id="search-button"
-              alt=" "
               src="img/search.svg"
+              title="Search"
             />
           </form>
           <input
             class="floater-right"
             type="image"
             id="location-button"
-            alt=" "
             src="img/location.svg"
+            title="Current location"
           />
         </div>
         <h1><span id="city"></span>, <span id="country"></span></h1>
