Footer links now open in new tab

--- a/index.html
+++ b/index.html
@@ -86,15 +86,19 @@
         <a
           class="footer-link"
           href="https://github.com/springchild/new-weather-app"
+          target="_blank"
           >Open-source code</a
         >
         by
         <a
           class="footer-link"
           href="https://www.linkedin.com/in/polina-dyrda-a5121621b/"
+          target="_blank"
           >Polina Dyrda</a
         >. Hosted on
-        <a class="footer-link" href="https://www.netlify.com/">Netlify.</a>
+        <a class="footer-link" href="https://www.netlify.com/" target="_blank"
+          >Netlify.</a
+        >
       </footer>
     </div>
     <script src="src/index.js"></script>
